01crea-ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
   - Lanzar una instancia EC2 en una subred pública en us-east-1
   - Creara VPC
   - Subred SubredPublica
   - EC2 Ubuntu
# Paco Cua - septiembre 2025
Resources:
  cuaVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.10.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: cuaVPC

  cuaSubredPub:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref cuaVPC
      CidrBlock: 10.10.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: cua-SubredPublica

  MyInternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref cuaVPC
      InternetGatewayId: !Ref MyInternetGateway

  MyRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref cuaVPC

  MyRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref cuaSubredPub
      RouteTableId: !Ref MyRouteTable

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Permitir SSH
      VpcId: !Ref cuaVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  cuaEC2ubuntu:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-04b4f1a9cf54c11d0
      SubnetId: !Ref cuaSubredPub
      SecurityGroupIds:
        - !Ref MySecurityGroup
      KeyName: vockey     
      Tags:
        - Key: Name
          Value: ubuntu-server
